Fixed overflow on user page when having huge bio

--- a/src/components/sideMenu/sideSection.module.css
+++ b/src/components/sideMenu/sideSection.module.css
@@ -30,7 +30,6 @@
 }
 
 .sideSectionProfileSection {
-    border-bottom: var(--accent-1) 1px solid;
     padding: 8px 16px;
     color: var(--gray-9);
     text-decoration: none;
